@@ -42,11 +42,11 @@ DESCRIPTION
   support Kerberos v4 or AFS.  For an AFS session module that works with
   this module (or any other Kerberos PAM module), see pam-afs-session [1].
 
+  [1] https://www.eyrie.org/~eagle/software/pam-afs-session/
+
   If there are other options besides AFS and Kerberos v4 support from the
   Sourceforge PAM module that you're missing in this module, please let me
   know.
-
-  [1] https://www.eyrie.org/~eagle/software/pam-afs-session/
 
 REQUIREMENTS
 
