@@ -344,6 +344,8 @@ BUILDING ON WINDOWS
   Next, install the MIT Kerberos for Windows SDK [1].  remctl has been
   tested with version 3.2.1 but should hopefully work with later versions.
 
+  [1] https://web.mit.edu/kerberos/www/dist/index.html
+
   Then, follow these steps:
 
   1. Run the InitEnv.cmd script included with the Windows SDK with
@@ -360,8 +362,6 @@ BUILDING ON WINDOWS
   If all goes well, you will have remctl.exe and remctl.dll.  The latter
   is a shared library used by the client program.  It exports the same
   interface as the UNIX libremctl library.
-
-  [1] https://web.mit.edu/kerberos/www/dist/index.html
 
 SUPPORT
 
